# prov_cop

./: .gitignore  README.md  index.html  wifi_provisioner_qt.py
.github/workflows/: ci.yml
esp32/Provisioner/: keywords.txt  library.properties
esp32/Provisioner/examples/Basic/: Basic.ino
esp32/Provisioner/src/: Provisioner.cpp  Provisioner.h
esp32/provisioner/: CMakeLists.txt  idf_component.yml
esp32/provisioner/examples/basic/main/: CMakeLists.txt  main.c
esp32/provisioner/examples/shared_console/: CMakeLists.txt
esp32/provisioner/examples/shared_console/main/: main.c
esp32/provisioner/include/: provisioner.h
esp32/provisioner/src/: provisioner.c
esp32/provisioner/test/host/: mbedtls_base64_stub.c  test_proto.c
provisioner/: Kconfig
provisioner/examples/basic/: CMakeLists.txt
provisioner/examples/basic/main/: main.c
provisioner/examples/shared_console/main/: CMakeLists.txt  main.c
provisioner/include/: provisioner.h
provisioner/src/: provisioner_proto.c  provisioner_proto.h
provisioner/test/host/: CMakeLists.txt  test_proto.c
provisioner/test/host/mbedtls/: base64.h
